--- a/basic_calcu.html
+++ b/basic_calcu.html
@@ -36,12 +36,12 @@ body {
 .calculator {
   
     display: inline-block;
-    background: white;
+    background: #F8EFE8;
     margin: 1% 0;
     color: black;
     border: 3px solid #000000;
     border-radius: 5px;
-    box-shadow: 2px 2px 1px 0px #000000;
+    box-shadow: 2px 2px 1px 0px #F8EFE8;
     max-width: 240px;
 
   
@@ -122,7 +122,7 @@ body {
     overflow-wrap: break-word;
     font-size: 30px;
     font-family: monospace;
-    background-color: #000;
+    background-color: #DAA4AB;
     color: #fff;
 
 }
