--- a/basic_calcu.html
+++ b/basic_calcu.html
@@ -73,8 +73,8 @@ body {
     min-height: 2.4em;
     margin: 0.5%;
     border-radius: 15%;
-    border: 0.08em solid #ffffff;
-    background: white;
+    border: 0.08em solid #F8EFE8;
+    background: #F8EFE8;
 
 
 }
