--- a/basic_calcu.html
+++ b/basic_calcu.html
@@ -39,9 +39,9 @@ body {
     background: #F8EFE8;
     margin: 1% 0;
     color: black;
-    border: 3px solid #000000;
+    border: 3px solid #C5888F;
     border-radius: 5px;
-    box-shadow: 2px 2px 1px 0px #F8EFE8;
+    box-shadow: 2px 2px 1px 0px #C5888F;
     max-width: 240px;
 
   
@@ -112,7 +112,7 @@ body {
 
  #screen{
 
-    border: 3px solid #000000;
+    border: 3px solid #C5888F;
     border-radius: 5px;
     width: 80%;
     height: 50px;
