--- a/basic_calcu.html
+++ b/basic_calcu.html
@@ -130,7 +130,7 @@ body {
     
 #clean {
   background: rgb(27, 27, 27);
-  color:#ffffff;
+  color:#C5888F;
 }
 #rad {
   background: rgb(27, 27, 27);
