--- a/basic_calcu.html
+++ b/basic_calcu.html
@@ -129,8 +129,8 @@ body {
 
     
 #clean {
-  background: rgb(27, 27, 27);
-  color:#C5888F;
+  background: #C5888F;
+  color:#ffffff;
 }
 #rad {
   background: rgb(27, 27, 27);
